2008-11-05  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dave Hyatt

        https://bugs.webkit.org/show_bug.cgi?id=21870

        Implement absoluteToLocal() to convert a point from absolute
        to local coordinates, optionally taking transforms into account.

        Use this to set offsetX/offsetY in mouse events, thus fixing
        offsetX/offsetY in events on elements with transforms.

        Test: fast/events/offsetX-offsetY.html

Canonical link: https://commits.webkit.org/30404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38186 268f45cc-cd09-0410-ab3c-d52691b4dbfc