WebCore/rendering/RenderBox.h
@@ -50,6 +50,7 @@ public:
     virtual void setOverrideSize(int);
 
     virtual FloatPoint localToAbsolute(FloatPoint localPoint = FloatPoint(), bool fixed = false, bool useTransforms = false) const;
+    virtual FloatPoint absoluteToLocal(FloatPoint containerPoint, bool fixed = false, bool useTransforms = false) const;
 
     virtual int xPos() const { return m_x; }
     virtual int yPos() const { return m_y; }
@@ -189,6 +190,8 @@ protected:
     
     virtual bool shouldCalculateSizeAsReplaced() const { return isReplaced() && !isInlineBlockOrInlineTable(); }
 
+    IntSize offsetFromContainer(RenderObject*) const;
+    
 private:
     void paintRootBoxDecorations(PaintInfo&, int tx, int ty);
     // Returns true if we did a full repaint
