WebCore/rendering/RenderView.h
@@ -45,6 +45,7 @@ public:
     virtual void calcHeight();
     virtual void calcPrefWidths();
     virtual FloatPoint localToAbsolute(FloatPoint localPoint = FloatPoint(), bool fixed = false, bool useTransforms = false) const;
+    virtual FloatPoint absoluteToLocal(FloatPoint containerPoint, bool fixed = false, bool useTransforms = false) const;
     
     int docHeight() const;
     int docWidth() const;
